// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as submit 1`] = `
<button
  className="f12tyf0k"
  disabled={undefined}
  onClick={[Function]}
  type="submit"
>
  Button
</button>
`;

exports[`should render as submit 2`] = `
"
.f12tyf0k:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.f12tyf0k:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.f12tyf0k:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.f12tyf0k[title] {
  pointer-events: none
}

.f12tyf0k {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;

exports[`should render with loading 1`] = `
<button
  className="fnubafe"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with loading 2`] = `
"
@-webkit-keyframes k1 {
  50% {
    opacity: 0
  }
}

@-moz-keyframes k1 {
  50% {
    opacity: 0
  }
}

@keyframes k1 {
  50% {
    opacity: 0
  }
}

.fnubafe:hover {
  background-color: #ededed;
  border-color: #dbdbdb;
  color: #ededed
}

.fnubafe:active {
  background-color: #215685;
  border-color: #dbdbdb;
  color: #fff
}

.fnubafe:focus {
  color: #ededed;
  outline: none;
  border-color: #dbdbdb
}

.fnubafe::before {
  content: \\"…\\";
  color: black;
  display: block;
  position: absolute;
  top: 0.6em;
  left: 0px;
  height: 100%;
  width: 100%;
  opacity: 1;
  animation-name: k1;
  animation-duration: 1s;
  -webkit-animation-duration: 1s;
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite;
  animation-timing-function: linear;
  -webkit-animation-timing-function: linear
}

.fnubafe[title] {
  pointer-events: none
}

.fnubafe {
  background-color: #ededed;
  border-bottom: 1px solid;
  border-color: #dbdbdb;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #ededed;
  cursor: default;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: 0.8;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;

exports[`should render with loading and disabled overridden 1`] = `
<button
  className="fnubafe"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with loading and disabled overridden 2`] = `
"
@-webkit-keyframes k1 {
  50% {
    opacity: 0
  }
}

@-moz-keyframes k1 {
  50% {
    opacity: 0
  }
}

@keyframes k1 {
  50% {
    opacity: 0
  }
}

.fnubafe:hover {
  background-color: #ededed;
  border-color: #dbdbdb;
  color: #ededed
}

.fnubafe:active {
  background-color: #215685;
  border-color: #dbdbdb;
  color: #fff
}

.fnubafe:focus {
  color: #ededed;
  outline: none;
  border-color: #dbdbdb
}

.fnubafe::before {
  content: \\"…\\";
  color: black;
  display: block;
  position: absolute;
  top: 0.6em;
  left: 0px;
  height: 100%;
  width: 100%;
  opacity: 1;
  animation-name: k1;
  animation-duration: 1s;
  -webkit-animation-duration: 1s;
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite;
  animation-timing-function: linear;
  -webkit-animation-timing-function: linear
}

.fnubafe[title] {
  pointer-events: none
}

.fnubafe {
  background-color: #ededed;
  border-bottom: 1px solid;
  border-color: #dbdbdb;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #ededed;
  cursor: default;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: 0.8;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;

exports[`should render with type 1`] = `
<button
  className="f12tyf0k"
  disabled={undefined}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with type 2`] = `
"
.f12tyf0k:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.f12tyf0k:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.f12tyf0k:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.f12tyf0k[title] {
  pointer-events: none
}

.f12tyf0k {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: inherit;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: auto;
  position: relative;
  border-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;

exports[`should render with type/disabled 1`] = `
<button
  className="fbare0q"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`should render with type/disabled 2`] = `
"
.fbare0q:hover {
  background-color: #2869a2;
  border-color: #215685;
  color: #fff
}

.fbare0q:active {
  background-color: #215685;
  border-color: #1a4468;
  color: #fff
}

.fbare0q:focus {
  background-color: #2f7bbf;
  color: #fff;
  border-color: #2869a2
}

.fbare0q[title] {
  pointer-events: auto
}

.fbare0q {
  background-color: #2f7bbf;
  border-bottom: 1px solid;
  border-color: #2869a2;
  border-left: 0px;
  border-right: 0px;
  border-top: 0px;
  color: #fff;
  cursor: default;
  display: inline-block;
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif;
  font-size: 0.9333333333333333rem;
  font-weight: 400;
  line-height: 1.2;
  margin-bottom: 0px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
  opacity: 0.5;
  padding-bottom: 0.53em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.6em;
  pointer-events: none;
  position: relative;
  border-radius: 2px;
  text-align: center;
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  float: none;
  max-width: initial
}
"
`;
